--- a/src/style.css
+++ b/src/style.css
@@ -2,17 +2,33 @@ body {
     display: flex;
     flex-direction: row;
 
+    justify-content: center;
+    align-items: center;
+
     width: 99vw;
     height: 98vh;
 
-    background-color: black;
+    background-color: #353434;
+}
+
+.player {
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+
+    width: 50%;
+    height: 99%;
 }
 
 .shipsContainer {
     display: flex;
     flex-direction: row;
 
-    width: fit-content;
+    justify-content: space-around;
+
+    width: 100%;
     height: fit-content;
 
     background-color: gray;
@@ -25,6 +41,8 @@ body {
     width: fit-content;
     height: fit-content;
 
+    padding: 1rem;
+
     background-color: black;
 }
 
@@ -34,10 +52,9 @@ body {
 }
 
 .square {
-    width: 2rem;
-    height: 2rem;
+    width: 5rem;
+    height: 5rem;
 
-    padding: 0.5rem;
     margin: 0.25rem;
 
     background-color: white;
@@ -52,4 +69,24 @@ body {
     height: 2rem;
 
     background-color: tan;
+}
+
+.ship.three {
+    height: 3rem
+}
+
+.ship.four {
+    height: 4rem
+}
+
+.ship.five {
+    height: 5rem
+}
+
+.ship.six {
+    height: 6rem
+}
+
+.ship.seven {
+    height: 7rem
 }
