--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,8 @@ body {
     width: 99vw;
     height: 98vh;
 
+    box-sizing: border-box;
+
     background-color: #353434;
 }
 
@@ -18,28 +20,20 @@ body {
     justify-content: center;
     align-items: center;
 
-    width: 50%;
+    width: max-content;
     height: 99%;
-}
 
-.shipsContainer {
-    display: flex;
-    flex-direction: row;
-
-    justify-content: space-around;
-
-    width: 100%;
-    height: fit-content;
-
-    background-color: gray;
+    box-sizing: border-box;
 }
 
 .board {
     display: flex;
     flex-direction: column;
 
-    width: fit-content;
-    height: fit-content;
+    width: max-content;
+    height: max-content;
+
+    box-sizing: border-box;
 
     padding: 1rem;
 
@@ -64,29 +58,63 @@ body {
     background-color: darkgoldenrod;
 }
 
+.shipsContainer {
+    display: flex;
+    flex-direction: row;
+
+    justify-content: space-around;
+    align-items: center;
+
+    width: 100%;
+    height: 14rem;
+
+    position: static;
+
+    background-color: gray;
+}
+
 .ship {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
     width: 2rem;
     height: 2rem;
 
-    background-color: tan;
+    position: relative;
+
+    background: linear-gradient(90deg,rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);;
 }
 
-.ship.three {
-    height: 3rem
+.ship.reversed.vertical {
+    rotate: -90deg;
 }
 
-.ship.four {
-    height: 4rem
+.ship.reversed {
+    rotate: 180deg;
 }
 
-.ship.five {
-    height: 5rem
+.ship.vertical {
+    rotate: 90deg;
 }
 
-.ship.six {
-    height: 6rem
+.ship.len3 {
+    width: 3rem
 }
 
-.ship.seven {
-    height: 7rem
+.ship.len4 {
+    width: 4rem
+}
+
+.ship.len5 {
+    width: 5rem
+}
+
+.ship.len6 {
+    width: 6rem
+}
+
+.ship.len7 {
+    width: 7rem
 }
