--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,22 @@
+html {
+    font-size: 5em;
+}
+
 body {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 
     width: 99vw;
-    height: 98vh;
+    height: fit-content;
 
     box-sizing: border-box;
 
     background-color: #353434;
+
+    font-size: 1rem;
 }
 
 .player {
@@ -24,6 +30,8 @@ body {
     height: 99%;
 
     box-sizing: border-box;
+
+    font-size: 0.2rem;
 }
 
 .board {
@@ -35,7 +43,7 @@ body {
 
     box-sizing: border-box;
 
-    padding: 1rem;
+    padding: 0.1rem;
 
     background-color: black;
 }
@@ -45,17 +53,25 @@ body {
     flex-direction: row;
 }
 
-.square {
-    width: 5rem;
-    height: 5rem;
+.row {
+    background-color: black;
+}
 
-    margin: 0.25rem;
+.square {
+    width: 1rem;
+    height: 1rem;
+
+    margin: 0.1rem;
 
     background-color: white;
 }
 
 .square.occupied {
     background-color: darkgoldenrod;
+}
+
+.square.damage {
+    background-color: maroon;
 }
 
 .shipsContainer {
@@ -66,11 +82,13 @@ body {
     align-items: center;
 
     width: 100%;
-    height: 14rem;
+    height: 3rem;
 
     position: static;
 
     background-color: gray;
+
+    font-size: 0.5rem;
 }
 
 .ship {
@@ -79,12 +97,12 @@ body {
     justify-content: center;
     align-items: center;
 
-    width: 2rem;
-    height: 2rem;
+    width: 3em;
+    height: 1em;
 
     position: relative;
 
-    background: linear-gradient(90deg,rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);;
+    background: linear-gradient(90deg,rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);
 }
 
 .ship.reversed.vertical {
@@ -100,21 +118,29 @@ body {
 }
 
 .ship.len3 {
-    width: 3rem
+    background: linear-gradient(90deg, rgb(53, 75, 189) 0%, rgba(87, 199, 133, 1) 50%, rgb(237, 221, 83, 1) 100%);;
 }
 
 .ship.len4 {
-    width: 4rem
+    width: 4em;
+
+    background: linear-gradient(90deg,rgba(87, 199, 133, 1) 0%, rgba(237, 221, 83, 1) 50%, rgb(237, 129, 83, 1) 100%);;
 }
 
 .ship.len5 {
-    width: 5rem
+    width: 5em;
+
+    background: linear-gradient(90deg,rgba(237, 221, 83, 1) 0%, rgba(237, 129, 83) 50%, rgb(218, 56, 56, 1) 100%);;
 }
 
 .ship.len6 {
-    width: 6rem
+    width: 6em;
+
+    background: linear-gradient(90deg,rgba(237, 129, 83, 1) 0%, rgba(218, 56, 56, 1) 50%, rgb(90, 3, 3, 1) 100%);;
 }
 
 .ship.len7 {
-    width: 7rem
+    width: 7em;
+
+    background: linear-gradient(90deg,rgba(218, 56, 56, 1) 0%, rgba(90, 3, 3, 1) 50%, rgb(37, 3, 38) 100%);;
 }
