game loop half working

--- a/src/style.css
+++ b/src/style.css
@@ -74,6 +74,10 @@ body {
     background-color: maroon;
 }
 
+.square.miss {
+    background-color: blue;
+}
+
 .shipsContainer {
     display: flex;
     flex-direction: row;
