--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,14 @@ body {
     font-size: 1rem;
 }
 
+div.invalid {
+    border: 1px solid red;
+}
+
+.gameSettings {
+    font-size: calc(1rem * (2/3));
+}
+
 .player {
     display: flex;
     flex-direction: column;
