--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,7 @@ body {
     box-sizing: border-box;
 
     background-color: #353434;
+    color: white;
 
     font-size: 1rem;
 }
@@ -48,6 +49,7 @@ div.invalid {
     overflow: scroll;
 
     background-color: indianred;
+    color: black;
 
     display: flex;
     flex-direction: column;
