hover effect for offense squares

--- a/src/style.css
+++ b/src/style.css
@@ -271,6 +271,10 @@ div.invalid {
     background-color: white;
 }
 
+.square.offense:not(.hit):not(.sunk):not(.miss):hover {
+    background-color: antiquewhite;
+}
+
 .square.waiting {
     background-color: black;
     opacity: 0;
@@ -309,7 +313,7 @@ div.invalid {
 
     transform: scale(1);
 
-    transition: transform 0.5s cubic-bezier(0.68, -1.5, 0.68, 1);
+    transition: transform 0.5s cubic-bezier(0.315, 1.683, 0.358, -0.593);
 }
 
 .square.offense.sunk {
@@ -317,7 +321,7 @@ div.invalid {
 
     transform: scale(1);
 
-    transition: transform 0.25s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    transition: transform 0.25s cubic-bezier(1, 2, 0, 0.31);
 }
 
 .square.offense.hit {
@@ -327,7 +331,9 @@ div.invalid {
 
     transform: scale(1);
 
-    transition: transform 0.25s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    transition: transform 0.25s cubic-bezier(1, 2, 0, 0.31)
+
+    /*transition: transform 0.25s cubic-bezier(0.68, -0.55, 0.27, 1.55);*/
 }
 
 .square.offense.hit.q2 {
