--- a/src/style.css
+++ b/src/style.css
@@ -247,6 +247,8 @@ div.invalid {
 
     box-sizing: border-box;
 
+    padding: min(calc(95vw / (exp(3) * var(--boardLength))), calc(95vh / (exp(3) * var(--boardLength))));
+
     /*margin-left: clamp(0rem, calc(100%/(3.5/16)), calc(100%/(3.5/16)));*/
     /*margin-right: clamp(0rem, calc(100%/(3.5/16)), calc(100%/(3.5/16)));*/
 
@@ -273,7 +275,7 @@ div.invalid {
 }
 
 .row:last-child > .square {
-    margin-bottom: calc((1 / (var(--boardLength) + 1)) * (var(--padding) * 2));
+    /*margin-bottom: min(calc(95vw / (exp(3) * var(--boardLength))), calc(95vh / (exp(3) * var(--boardLength))));*/
 }
 
 .square {
@@ -281,20 +283,20 @@ div.invalid {
 
     box-sizing: border-box;
 
-    min-width: min(4rem, calc(95vw / var(--boardLength)), calc(95vh / (var(--boardLength) + 3)));
-    min-height: min(4rem, calc(95vw / var(--boardLength)), calc(95vh / (var(--boardLength) + 3)));
+    width: min(calc(95vw / var(--boardLength)), calc(95vh / (var(--boardLength) + 3)));
+    height: min(calc(95vw / var(--boardLength)), calc(95vh / (var(--boardLength) + 3)));
 
-    --padding: min(4rem,calc((100vw / var(--boardLength)) / 2),calc((100vh / var(--boardLength)) / 2));
+    /*--padding: min(calc((100vw / var(--boardLength)) / 2),calc((100vh / (var(--boardLength) + 3)) / 2));*/
     /*padding: var(--padding);*/
 
-    border-left: solid calc((1 / (var(--boardLength) + 1)) * (var(--padding) * 2)) black;
-    border-top: solid calc((1 / (var(--boardLength) + 1)) * (var(--padding) * 2)) black;
+    border: solid min(calc(95vw / (exp(3) * var(--boardLength))), calc(95vh / (exp(3) * var(--boardLength)))) black;
+    /*border-top: solid min(calc(95vw / (exp(3) * var(--boardLength))), calc(95vh / (exp(3) * var(--boardLength)))) black;*/
 
     background-color: white;
 }
 
 .square:last-child {
-    margin-right: calc((1 / (var(--boardLength) + 1)) * (var(--padding) * 2));
+    /*margin-right: min(calc(95vw / (exp(3) * var(--boardLength))), calc(95vh / (exp(3) * var(--boardLength))));*/
 }
 
 .square.offense:not(.hit):not(.sunk):not(.miss):hover {
